@@ -215,7 +215,7 @@ extern void libpdffinish(void);
 extern char *makecfilename(strnumber s);
 extern void make_subset_tag(fd_entry *);
 extern void setjobid(int, int, int, int);
-extern void writestreamlength(integer, longinteger);
+extern void writestreamlength(longinteger, longinteger);
 extern void printID(strnumber);
 extern void printcreationdate(void);
 extern void printmoddate(void);
@@ -259,7 +259,7 @@ extern void allocvffnts(void);
 
 /* vfpacket.c */
 extern integer newvfpacket(internalfontnumber);
-extern void storepacket(internalfontnumber, eightbits, strnumber);
+extern void storepacket(internalfontnumber, integer, strnumber);
 extern void startpacket(internalfontnumber, eightbits);
 extern eightbits packetbyte(void);
 extern void poppacketstate(void);
