@@ -409,13 +409,13 @@ int xputc(int c, FILE * stream)
     return i;
 }
 
-void writestreamlength(integer length, longinteger offset)
+void writestreamlength(longinteger length, longinteger offset)
 {
     if (jobname_cstr == NULL)
         jobname_cstr = xstrdup(makecstring(jobname));
     if (fixedpdfdraftmode == 0) {
         xfseeko(pdffile, (off_t) offset, SEEK_SET, jobname_cstr);
-        fprintf(pdffile, "%li", (long int) length);
+        fprintf(pdffile, "%" LONGINTEGER_PRI "i", length);
         xfseeko(pdffile, (off_t) pdfoffset(), SEEK_SET, jobname_cstr);
     }
 }
